--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
-<h1>Test</h1>
+<div class="contain">
+    <section>
+        <h1>Thanks!</h1>
+        <p>Thank you for being willing to take a survey.</p>
+        <p>Greenix sends reviews via text message. Please keep an eye out for our review text!</p>
+    </section>
+
+</div>    
+
 
 
 
