added filter to background image

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-<div class="contain">
-    <section>
+<div class="contain module">
+    <section class='module-inside'>
         <h1>Thanks!</h1>
         <p>Thank you for being willing to take a survey.</p>
         <p>Greenix sends reviews via text message. Please keep an eye out for our review text!</p>
