alpha version done

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 <div class="contain module">
     <section class='module-inside'>
-        <h1>Thanks!</h1>
-        <p>Thank you for being willing to take a survey.</p>
-        <p>Greenix sends reviews via text message. Please keep an eye out for our review text!</p>
+        <h1>NOTED</h1>
+        <p>Thank you for letting us know that you'd like to review your technician.</p>
+        <p>Greenix sends reviews via text message. You will receive a text in the next 2-3 business days asking for your feedback.</p>
     </section>
 
 </div>    
