--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class='module-inside'>
         <h1>Thanks!</h1>
         <p>Thank you for letting us know that you'd like to review your service professional.</p>
-        <p>You will receive a text message in 2-3 business days asking for your feedback. We appreciate positive feedback, but also are open to suggestions for improvement. </p>
+        <p>You will receive a text message soon asking for your feedback. We appreciate positive feedback, but also are open to suggestions for improvement. </p>
 
 
     </section>
