--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Thank You!</title>
-   <link rel="stylesheet" href="./styles.css">
+   <link rel="stylesheet" href="./styles2.css">
 </head>
 <body>
     <nav>
@@ -26,6 +26,6 @@
 
 </div>    
 
-<script src='./script.js'></script>
+<script src='./script2.js'></script>
 </body>
 </html>
