fixed issue with ipad styling and edited copy

--- a/index2.html
+++ b/index2.html
@@ -18,8 +18,9 @@
 <div class="contain module">
     <section class='module-inside'>
         <h1>Thanks!</h1>
-        <p>Thank you for letting us know that you'd like to review your service professional.</p>
-        <p>You will receive a text message soon asking for your feedback. We appreciate positive feedback, but also are open to suggestions for improvement. </p>
+        <p>We appreciate your willingness to review your Greenix Service Professional.</p>
+        <p>You will receive a feedback request via text message or email shortly after your service has been completed.  If you have not received your feedback request or if there is anything we can assist you with, please let us know by calling 844-233-7378.
+        </p>
 
 
     </section>
